@@ -1,7 +1,7 @@
 /*!
  * \file 
  * \brief Definitions of audio Audio classes and functions
- * \author Tobias Ringstrom
+ * \author Tobias Ringstrom and Adam Piatyszek
  *
  * $Date$
  * $Revision$
@@ -34,6 +34,7 @@
 #define AUDIOFILE_H
 
 #include <itpp/base/vec.h>
+#include <itpp/base/itmisc.h>
 #include <fstream>
 
 
@@ -346,6 +347,38 @@ namespace itpp {
   // Write SAP audio data
   bool sap_write(const char *fname, const vec &v, const char *hdr);
   */
+
+  //! Read binary data and optionally switch endianness
+  template<typename T>
+  inline T read_endian(std::istream &s, bool switch_endian = false)
+  {
+    T data;
+    int bytes = sizeof(T);
+    char *c = reinterpret_cast<char *>(&data);
+    if (!switch_endian) {
+      s.read(c, bytes);
+    }
+    else {
+      for (int i = bytes-1; i >= 0; i--)
+	s.get(c[i]);
+    }
+    return data;
+  }
+ 
+  //! Write binary data and optionally switch endianness
+  template<typename T>
+  inline void write_endian(std::ostream &s, T data, bool switch_endian = false)
+  {
+    int bytes = sizeof(T);
+    char *c = reinterpret_cast<char *>(&data);
+    if (!switch_endian) {
+      s.write(c, bytes);
+    }
+    else {
+      for (int i = bytes-1; i >= 0; i--)
+	s.put(c[i]);
+    }
+  }
 
   //!@}
 
